--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,8 +34,9 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v5
       with:
-       gradle-version: '9.3.1' # Quotes required to prevent YAML converting to number
+        gradle-version: '9.3.1'
+
     - name: Build with Gradle
-      run: ./gradlew build
+      run: gradle build
 
 
