--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,14 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    
+    env:
+      DISPLAY: ":99.0"
+
+    services:
+      xvfb:
+        image: selenium/standalone-chrome:latest
+        options: -e VNC_SERVER=true -e VNC_PORT=5900
 
     steps:
     - uses: actions/checkout@v6
@@ -28,6 +36,9 @@ jobs:
       with:
         java-version: '25'
         distribution: 'temurin'
+    
+    - name: Start Xvfb
+      run: Xvfb $DISPLAY -ac -screen 0 1600x1200x24 > /dev/null 2>&1 &
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -38,5 +49,12 @@ jobs:
 
     - name: Build with Gradle
       run: gradle build
+
+    - name: Test Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-report
+        path: app/build/reports/tests
 
 
