--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,12 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [10, 12, 14]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
     
@@ -31,10 +36,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v6
-    - name: Set up JDK 25
+    - name: Set up JDK ${{ matrix.version }}
       uses: actions/setup-java@v5
       with:
-        java-version: '25'
+        java-version: ${{ matrix.version }}
         distribution: 'temurin'
     
     - name: Start Xvfb
