--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,13 +37,7 @@ jobs:
       with:
         java-version: ${{ matrix.version }}
         distribution: 'temurin'
-    
-    # Only run Xvfb on Linux
-    - name: Start Xvfb
-      if: runner.os == 'Linux'
-      run:
-        sudo apt-get install xvfb
-        Xvfb $DISPLAY -ac -screen 0 1600x1200x24 > /dev/null 2>&1 &
+
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -53,7 +47,14 @@ jobs:
         gradle-version: '9.3.1'
 
     - name: Build with Gradle
-      run: gradle build
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          xvfb-run --auto-servernum gradle build
+        else
+          gradle build
+        fi
 
     - name: Test Report
       if: always()
