--- a/.github/workflows/dependency-submission.yml
+++ b/.github/workflows/dependency-submission.yml
@@ -18,4 +18,4 @@ jobs:
         java-version: '25'
         distribution: 'temurin'
     - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@{latest}
+      uses: gradle/actions/dependency-submission@v3
