--- a/.github/workflows/pmd-analysis.yml
+++ b/.github/workflows/pmd-analysis.yml
@@ -28,6 +28,7 @@ jobs:
         uses: pmd/pmd-github-action@v2
         with:
           rulesets: 'category/java/errorprone.xml'
+          sourcePath: 'app/src/main/java'
       - name: Fail build if there are violations
         if: steps.pmd.outputs.violations > 8
         run: exit 1
