--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -85,10 +85,14 @@ jobs:
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     
+    - name: Set up JDK 25
+      uses: actions/setup-java@v5
+      with:
+        java-version: '25'
+        distribution: 'temurin'
+
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v5
-      with:
-        gradle-version: '9.3.1'
 
     - name: Build with Gradle
       run: gradle build
