--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -85,12 +85,15 @@ jobs:
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     
+    - name: Start Xvfb
+      run: /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &
+
     - name: Set up JDK 25
       uses: actions/setup-java@v5
       with:
         java-version: '25'
         distribution: 'temurin'
-
+    
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v5
 
