--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -84,9 +84,7 @@ jobs:
     # to build your code.
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
-    
-    - name: Start Xvfb
-      run: /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &
+
 
     - name: Set up JDK 25
       uses: actions/setup-java@v5
@@ -98,7 +96,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v5
 
     - name: Build with Gradle
-      run: gradle build
+      run: xvfb-run gradle build
     
     
     - name: Perform CodeQL Analysis
